k8s/mongo-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: nodegoat1
  labels:
    app: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
